Restore GC tunings dropped by gatling-sbt 4.10.2 to fix JMAP p99 regression
Gatling 3.12 replaced Akka with its own actor system
(io.gatling.core.actor, a fixed thread pool + per-actor MPSC queues),
raising per-request reference churn on the HTTP path the JMAP
simulations go through. Concurrently, gatling-sbt 4.10.2 (required
for Gatling 3.13's --add-opens JVM option) dropped -XX:+UseG1GC and
-XX:+ParallelRefProcEnabled from DEFAULT_JVM_OPTIONS_GATLING.

With serial reference processing and a 1G heap, the high-churn JMAP
(HTTP) workload suffers GC-pause-driven p99 spikes (getMailboxes
534->2200ms, emailChanges 320->1475ms, emailGet 511->1068ms,
markAsAnswered 354->734ms). IMAP (gatling-imap, async imapnio futures,
far less gatling-actor churn) is unaffected, which is why only JMAP
regressed.

Restore the dropped GC tunings and give the gatling run more heap
headroom by appending -XX:+UseG1GC, -XX:+ParallelRefProcEnabled and
-Xmx2G to the Gatling/GatlingIt javaOptions. The JVM applies the
rightmost value, so these take precedence over gatling-sbt's defaults
(-Xmx1G).

Closes #195